# standardurl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Url.h  UrlDomain.h  UrlNorm.h  UrlNormIp.h  UrlNormUtil.h  UrlParse.h  UrlUtil.h
src/: Url.cc  UrlDomain.cc  UrlNorm.cc  UrlNormIcu.cc  UrlNormIp.cc  UrlParse.cc  UrlUtil.cc  string16.cc
